--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -1,8 +1,9 @@
 name: Bump version workflow
 
-on:   workflow_dispatch:
+on:
+  workflow_dispatch:
     inputs:
-      version:     
+      version:
         description: 'Semver type of new version (major / minor / patch)'
         required: true
         type: choice
@@ -11,27 +12,23 @@ on:   workflow_dispatch:
         - minor
         - major
 
-jobs:   bump-version:
+jobs:
+  bump-version:
     runs-on: ubuntu-latest
     steps:
-
     - name: checkout repo
       uses: actions/checkout@v2.4.0
-
     - name: setup python
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
         architecture: 'x64'
-
     - name: Install the latest version of rye
       uses: eifinger/setup-rye@v4
-  
     - name: Setup Git
       run: |
         git config user.name "${GITHUB_ACTOR}"
         git config user.email "${GITHUB_ACTOR}@atareao.es"
-
     - name: bump version
       run: |
         rye version -b ${{ github.event.inputs.version }} #the action is not update the code
