--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -42,5 +42,18 @@ jobs:
       uses: stefanzweifel/git-auto-commit-action@v5
       with:
         commit_message: "Bump version from ${{ env.original_version }} to ${{ env.new_version }}"
-        tagging_message: "v${{ env.new_version }}"
+    - name: checkout repo
+      uses: actions/checkout@v4
+      with:
+        ref: development
+    - name: Release snapshot
+      id: release-snapshot
+      uses: actions/create-release@latest
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: "v${{ env.new_version }}"
+        release_name: "v${{ env.new_version }}"
+        draft: false
+        prerelease: false
 
