--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -59,7 +59,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         tag_name: "v${{ env.release_version }}"
-        release_name: "v${{ env.new_version }}"
+        release_name: "v${{ env.release_version }}"
         draft: false
         prerelease: false
 
