--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -53,12 +53,13 @@ jobs:
       id: bump_version
       if: ${{ steps.get_action.outputs.action != 'none' }}
       run: |
-        action=${{ github.get_action.outputs.action }}
+        action=${{ steps.get_action.outputs.action }}
         rye version -b $option
         new_version=$(rye version)
         echo "new_version=${new_version}" >> $GITHUB_OUTPUT
     - name: commit
       uses: stefanzweifel/git-auto-commit-action@v5
+      if: ${{ steps.get_action.outputs.action != 'none' }}
       with:
         commit_message: "Bump version from ${{ steps.get_current_version.outputs.current_version}} to ${{ steps.bump_version.outputs.new_version }}"
 
