--- a/.github/workflows/bump-version.yml
+++ b/.github/workflows/bump-version.yml
@@ -78,5 +78,5 @@ jobs:
         git config user.name "${github_actor}"
         git config user.email "${github_actor}@users.noreply.github.com"
         git tag -a "v${current_version}" -m "Bump version to ${current_version}"
-        git push origin "${current_version}"
+        git push origin "v${current_version}"
         gh release create "v${current_version}" --title "v${current_version}" --notes "Bump version to ${current_version}"
